Fixed overflow-x on toastContainer

--- a/css/toastify.css
+++ b/css/toastify.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	right: 20px;
 	overflow: auto;
+  overflow-x: hidden;
 	z-index: 99999;
 	height: auto;
 	max-height: 95%;
